welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:6: error: '(' expected but identifier found.
  if isFacingTrail(c){
     ^SlugSnail:10: error: illegal start of simple expression
 }
 ^